--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,6 @@
 
     <include layout="@layout/content_main" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
-
     <RelativeLayout
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
@@ -97,6 +89,18 @@
         android:hint="Input 5"
         android:inputType="text" />
 
+        <EditText
+            android:id="@+id/editText6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/editText5"
+            android:layout_alignStart="@+id/editText5"
+            android:layout_below="@+id/editText5"
+            android:layout_marginTop="20dp"
+            android:ems="10"
+            android:hint="Input 6"
+            android:inputType="text" />
+
         <Button
             android:id="@+id/submit_button"
             style="@android:style/Widget.Button"
@@ -104,7 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText5"
+            android:layout_below="@+id/editText6"
             android:layout_marginTop="19dp"
             android:text="Get Soil Quality"
             android:textSize="16sp"
